# opentelemetry-poc

./: README.md  collector-config.yml  docker-compose.yml
dotnet-api/: Dockerfile  Program.cs  dotnet-api.csproj
dotnet-api/Properties/: launchSettings.json
react-client/: package-lock.json  package.json
react-client/src/: App.tsx
rust-api/: Cargo.toml  Dockerfile
rust-api/src/: main.rs
