[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29", features = ["full"] }
rand = { version = "0.8" }
hyper = { version = "0.14", features = ["full"] }
opentelemetry-otlp = "0.13.0"
opentelemetry = { version = "0.20.0", features = ["rt-tokio"] }
opentelemetry-semantic-conventions = "0.12.0"
